--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -153,7 +153,7 @@ input, select, textarea {
 
 	body {
 		background-color: #ffffff;
-		color: #000000;
+		color: #0206b7;
 	}
 
 	body, input, select, textarea {
