--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8312,8 +8312,8 @@ input, select, textarea {
 				#wrapper > .invert input[type="button"]:hover,
 				#wrapper > .invert button:hover,
 				#wrapper > .invert .button:hover {
-					box-shadow: inset 0 0 0 1px #47D3E5;
-					color: #47D3E5 !important;
+					box-shadow: inset 0 0 0 1px #000136;
+					color: #000136 !important;
 				}
 
 				#wrapper > .invert input[type="submit"]:active,
@@ -8322,8 +8322,8 @@ input, select, textarea {
 				#wrapper > .invert button:active,
 				#wrapper > .invert .button:active {
 					background-color: rgba(71, 211, 229, 0.2);
-					box-shadow: inset 0 0 0 1px #47D3E5;
-					color: #47D3E5 !important;
+					box-shadow: inset 0 0 0 1px #000136;
+					color: #000136 !important;
 				}
 
 				#wrapper > .invert input[type="submit"].primary,
@@ -8333,7 +8333,7 @@ input, select, textarea {
 				#wrapper > .invert .button.primary {
 					background-color: #ffffff;
 					box-shadow: none;
-					color: #000000 !important;
+					color: #0206b7 !important;
 				}
 
 					#wrapper > .invert input[type="submit"].primary:hover,
@@ -8341,7 +8341,7 @@ input, select, textarea {
 					#wrapper > .invert input[type="button"].primary:hover,
 					#wrapper > .invert button.primary:hover,
 					#wrapper > .invert .button.primary:hover {
-						background-color: #47D3E5;
+						background-color: #000136;
 					}
 
 					#wrapper > .invert input[type="submit"].primary:active,
@@ -8349,7 +8349,7 @@ input, select, textarea {
 					#wrapper > .invert input[type="button"].primary:active,
 					#wrapper > .invert button.primary:active,
 					#wrapper > .invert .button.primary:active {
-						background-color: #1ebdd1;
+						background-color: #000136;
 					}
 
 			#wrapper > .invert label {
