Mardi gras party WOO

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8567,7 +8567,7 @@ input, select, textarea {
 		}
 
 		#wrapper > .color8 {
-			background-color: #e55934;
+			background-color: #bb33ff;
 		}
 
 		#wrapper.divided > * {
