--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8570,6 +8570,10 @@ input, select, textarea {
 			background-color: #bb33ff;
 		}
 
+		#wrapper > .aquamarine {
+			background-color: #baffdf;
+		}
+
 		#wrapper.divided > * {
 			box-shadow: inset 0 1px 0 0 rgba(0, 0, 0, 0.075);
 		}
